--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,4 @@
-<app-navigation class="font-montserrat"></app-navigation>
-<app-login class="front-montserrat"></app-login>
-<main class="h-screen font-montserrat">
-  <router-outlet></router-outlet>
+<main class="h-screen font-firacode">
+  <app-navigation class="font-montserrat"></app-navigation>
 </main>
 
