--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -2,7 +2,7 @@
   <!-- Top nav-->
 
   <header class="flex-shrink-0 relative h-20 bg-Jblue flex items-center">
-    <div class="md:flex-shrink-0 flex items-center justify-end h-20 w-60 rounded-br-full rounded-tr-full bg-indigo-500 ">
+        <div class="md:flex-shrink-0 flex items-center justify-end h-20 w-60 rounded-br-full rounded-tr-full bg-indigo-500 ">
      <h1 class="font-bold text-white mr-4 text-lg">My name</h1>
       <a href="/" class="mr-4">
         <img class="h-12 w-auto" src="../../assets/logo_round.png" alt="Workflow">
@@ -106,17 +106,25 @@
           </div>
         </div>
         <div class="max-w-8xl mx-auto py-3 px-2 sm:px-4">
-          <a href="#" class="block rounded-md py-2 px-3 text-base font-medium text-gray-900 hover:bg-gray-100">Inboxes</a>
+          <a href="#" class="block rounded-md py-2 px-3 text-base font-medium text-gray-900 hover:bg-gray-100">CV</a>
 
-          <a href="#" class="block rounded-md py-2 pl-5 pr-3 text-base font-medium text-gray-500 hover:bg-gray-100">Technical Support</a>
+          <a href="#" class="block rounded-md py-2 pl-5 pr-3 text-base font-medium text-gray-500 hover:bg-gray-100">Contact info</a>
 
-          <a href="#" class="block rounded-md py-2 pl-5 pr-3 text-base font-medium text-gray-500 hover:bg-gray-100">Sales</a>
+          <a href="#" class="block rounded-md py-2 pl-5 pr-3 text-base font-medium text-gray-500 hover:bg-gray-100">About</a>
 
-          <a href="#" class="block rounded-md py-2 pl-5 pr-3 text-base font-medium text-gray-500 hover:bg-gray-100">General</a>
+          <a href="#" class="block rounded-md py-2 pl-5 pr-3 text-base font-medium text-gray-500 hover:bg-gray-100">Educations</a>
 
-          <a href="#" class="block rounded-md py-2 px-3 text-base font-medium text-gray-900 hover:bg-gray-100">Reporting</a>
+          <a href="#" class="block rounded-md py-2 px-3 text-base font-medium text-gray-900 hover:bg-gray-100">Certificates</a>
+
+          <a href="#" class="block rounded-md py-2 px-3 text-base font-medium text-gray-900 hover:bg-gray-100">Skills</a>
+
+          <a href="#" class="block rounded-md py-2 px-3 text-base font-medium text-gray-900 hover:bg-gray-100">Experiences</a>
+
+          <a href="#" class="block rounded-md py-2 px-3 text-base font-medium text-gray-900 hover:bg-gray-100">Languages</a>
 
           <a href="#" class="block rounded-md py-2 px-3 text-base font-medium text-gray-900 hover:bg-gray-100">Settings</a>
+
+          <a href="#" class="block rounded-md py-2 px-3 text-base font-medium text-gray-900 hover:bg-gray-100">Logout</a>
 
         </div>
         <div class="border-t border-gray-200 pt-4 pb-3">
@@ -125,16 +133,9 @@
               <img class="h-10 w-10 rounded-full" src="https://images.unsplash.com/photo-1517365830460-955ce3ccd263?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
             </div>
             <div class="ml-3 min-w-0 flex-1">
-              <div class="text-base font-medium text-gray-800 truncate">Whitney Francis</div>
-              <div class="text-sm font-medium text-gray-500 truncate">whitney.francis@example.com</div>
+              <div class="text-base font-medium text-gray-800 truncate">my name</div>
+              <div class="text-sm font-medium text-gray-500 truncate">my email</div>
             </div>
-            <a href="#" class="ml-auto flex-shrink-0 bg-white p-2 text-gray-400 hover:text-gray-500">
-              <span class="sr-only">View notifications</span>
-              <!-- Heroicon name: outline/bell -->
-              <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9" />
-              </svg>
-            </a>
           </div>
           <div class="mt-3 max-w-8xl mx-auto px-2 space-y-1 sm:px-4">
             <a href="#" class="block rounded-md py-2 px-3 text-base font-medium text-gray-900 hover:bg-gray-50">Your Profile</a>
@@ -145,7 +146,6 @@
       </nav>
     </div>
   </header>
-
   <!-- Bottom section -->
   <div class="min-h-0 flex-1 flex overflow-hidden">
     <!-- Narrow sidebar-->
@@ -160,7 +160,7 @@
           <!-- Heroicon name: outline/inbox -->
         </a>
 
-        <a href="#" class="text-gray-400 hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 rounded-lg">
+        <a href="#" class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 rounded-lg">
           <span class="sr-only">Archive</span>
           <!-- Heroicon name: outline/archive -->
           <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
@@ -168,7 +168,7 @@
           </svg>
         </a>
 
-        <a href="#" class="text-gray-400 hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 rounded-lg">
+        <a href="#" class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 rounded-lg">
           <span class="sr-only">Customers</span>
           <!-- Heroicon name: outline/user-circle -->
           <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
@@ -176,7 +176,7 @@
           </svg>
         </a>
 
-        <a href="#" class="text-gray-400 hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 rounded-lg">
+        <a href="#" class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 rounded-lg">
           <span class="sr-only">Flagged</span>
           <!-- Heroicon name: outline/flag -->
           <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
@@ -184,7 +184,7 @@
           </svg>
         </a>
 
-        <a href="#" class="text-gray-400 hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 rounded-lg">
+        <a href="#" class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 rounded-lg">
           <span class="sr-only">Spam</span>
           <!-- Heroicon name: outline/ban -->
           <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
@@ -192,7 +192,7 @@
           </svg>
         </a>
 
-        <a href="#" class="text-gray-400 hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 rounded-lg">
+        <a href="#" class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 rounded-lg">
           <span class="sr-only">Drafts</span>
           <!-- Heroicon name: outline/pencil-alt -->
           <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
@@ -200,7 +200,7 @@
           </svg>
         </a>
 
-        <a href="#" class="text-gray-400 hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 rounded-lg">
+        <a href="#" class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 rounded-lg">
           <span class="sr-only">Spam</span>
           <!-- Heroicon name: outline/ban -->
           <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
@@ -208,7 +208,7 @@
           </svg>
         </a>
 
-        <a href="#" class="text-gray-400 hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 rounded-lg">
+        <a href="#" class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 rounded-lg">
           <span class="sr-only">Spam</span>
           <!-- Heroicon name: outline/ban -->
           <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
@@ -216,7 +216,7 @@
           </svg>
         </a>
 
-        <a href="#" class="text-gray-400 hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 rounded-lg">
+        <a href="#" class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 rounded-lg">
           <span class="sr-only">Spam</span>
           <!-- Heroicon name: outline/ban -->
           <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
