--- a/src/app/registration-login-feature/login/login.component.html
+++ b/src/app/registration-login-feature/login/login.component.html
@@ -7,18 +7,33 @@
               <img class="pl-16 h-28 w-auto justify-self-center" src="../../assets/jarchitects.png" alt="Workflow">
               <div class="mt-8">
                 <div class="mt-6">
-                  <form action="#" method="POST" class="space-y-6">
+                  <form (ngSubmit)="onSubmit()" #authForm="ngForm" class="space-y-6">
                     <div>
                       <label for="email" class="block text-sm font-medium text-gray-700"> Email address </label>
                       <div class="mt-1">
-                        <input id="email" name="email" type="email" autocomplete="email" required class="appearance-none block w-full h-12 px-3 py-2 border border-gray-300 rounded-full shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
+                        <input email
+                        required
+                        [(ngModel)]="user.email"
+                        id="email"
+                        name="email"
+                        type="email"
+                        autocomplete="email"
+                        required
+ class="appearance-none block w-full h-12 px-3 py-2 border border-gray-300 rounded-full shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
                       </div>
                     </div>
 
                     <div class="space-y-1">
                       <label for="password" class="block text-sm font-medium text-gray-700"> Password </label>
                       <div class="mt-1">
-                        <input id="password" name="password" type="password" autocomplete="current-password" required class="appearance-none block w-full h-12 px-3 py-2 border border-gray-300 rounded-full shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
+                        <input
+                        required
+                        [(ngModel)]="user.password"
+                        id="password"
+                        name="password"
+                        type="password"
+                        autocomplete="current-password"
+                        required class="appearance-none block w-full h-12 px-3 py-2 border border-gray-300 rounded-full shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
                       </div>
                     </div>
 
@@ -29,7 +44,8 @@
                     </div>
 
                     <div class="pl-16">
-                      <button type="submit" class=" w-3/4 flex justify-center py-2 px-4 border border-transparent rounded-full h-12 shadow-sm text-lg font-medium text-white bg-Jorange hover:bg-Jblue focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Sign in</button>
+                      <button
+                      type="submit" class=" w-3/4 flex justify-center py-2 px-4 border border-transparent rounded-full h-12 shadow-sm text-lg font-medium text-white bg-Jorange hover:bg-Jblue focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Sign in</button>
                     </div>
                   </form>
                 </div>
