--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -67,71 +67,70 @@
     <nav *ngIf="isLoggedIn" aria-label="Sidebar" class="hidden md:block md:flex-shrink-0 md:bg-Jorange md:overflow-y-auto">
       <div class="relative w-20 flex flex-col p-3 space-y-3">
 
-        <a href="#" class="hover:bg-JorangeSelect text-white flex-shrink-0 inline-flex items-center justify-center h-14 w-14 rounded-lg">
-          <span class="sr-only">CV</span>
-          <fa-icon [icon]="faFile"></fa-icon>
+        <a href="#" class="hover:bg-JorangeSelect text-white flex-shrink-0 inline-flex items-center justify-center h-14 w-14 mt-1 rounded-lg">
+          <span class="sr-only ">CV</span>
+          <fa-icon transform="grow-18" [icon]="faFile"></fa-icon>
 
           <!-- Heroicon name: outline/inbox -->
         </a>
 
-        <a href="#" class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 rounded-lg">
+        <a href="#" class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 mt-1 rounded-lg">
           <span class="sr-only">Contact info</span>
           <!-- Heroicon name: outline/archive -->
-          <fa-icon [icon]="faIdCard"></fa-icon>
+          <fa-icon transform="grow-18" [icon]="faIdCard"></fa-icon>
         </a>
 
-        <a href="#" class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 rounded-lg">
+        <a href="#" class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 mt-1 rounded-lg">
           <span class="sr-only">About</span>
           <!-- Heroicon name: outline/user-circle -->
-          <fa-icon [icon]="faMessage"></fa-icon>
+          <fa-icon transform="grow-18" [icon]="faMessage"></fa-icon>
         </a>
 
-        <a href="#" class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 rounded-lg">
+        <a href="#" class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 mt-1 rounded-lg">
           <span class="sr-only">Educations</span>
           <!-- Heroicon name: outline/ban -->
-          <fa-icon [icon]="faGraduationCap"></fa-icon>
+          <fa-icon transform="grow-18" [icon]="faGraduationCap"></fa-icon>
 
         </a>
 
-        <a href="#" class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 rounded-lg">
+        <a href="#" class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 mt-1 rounded-lg">
           <span class="sr-only">Certificates</span>
           <!-- Heroicon name: outline/flag -->
-          <fa-icon [icon]="faCertificate"></fa-icon>
+          <fa-icon transform="grow-18" [icon]="faCertificate"></fa-icon>
         </a>
 
-        <a href="#" class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 rounded-lg">
+        <a href="#" class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 mt-1 rounded-lg">
           <span class="sr-only">Experiences</span>
           <!-- Heroicon name: outline/pencil-alt -->
-          <fa-icon [icon]="faBriefcase"></fa-icon>
+          <fa-icon transform="grow-18" [icon]="faBriefcase"></fa-icon>
 
         </a>
 
-        <a href="#" class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 rounded-lg">
+        <a href="#" class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 mt-1 rounded-lg">
           <span class="sr-only">Skills</span>
           <!-- Heroicon name: outline/ban -->
-          <fa-icon [icon]="faLightbulb"></fa-icon>
+          <fa-icon transform="grow-18" [icon]="faLightbulb"></fa-icon>
 
         </a>
 
-        <a href="#" class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 rounded-lg">
+        <a href="#" class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 mt-1 rounded-lg">
           <span class="sr-only">Languages</span>
           <!-- Heroicon name: outline/ban -->
-          <fa-icon [icon]="faEarthEurope"></fa-icon>
+          <fa-icon transform="grow-18" [icon]="faEarthEurope"></fa-icon>
 
         </a>
 
-        <a href="#" class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 rounded-lg">
+        <a href="#" class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 mt-1 rounded-lg">
           <span class="sr-only">Settings</span>
           <!-- Heroicon name: outline/ban -->
-          <fa-icon [icon]="faGear"></fa-icon>
+          <fa-icon transform="grow-18" [icon]="faGear"></fa-icon>
 
         </a>
 
-        <a href="#" class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 rounded-lg">
+        <a href="/login" class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 mt-1 rounded-lg" (click)="logOut()">
           <span class="sr-only">Logout</span>
           <!-- Heroicon name: outline/ban -->
-          <fa-icon [icon]="faRightFromBracket"></fa-icon>
-
+          <fa-icon transform="grow-18" [icon]="faRightFromBracket"></fa-icon>
         </a>
       </div>
     </nav>
