--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -3,9 +3,7 @@
   <header *ngIf="isLoggedIn == true" class="flex-shrink-0 relative h-20 bg-Jblue flex items-center">
 
         <div class="md:flex-shrink-0 flex items-center justify-end h-20 w-60 rounded-br-full rounded-tr-full bg-indigo-500 ">
-          <div class="mr-2 mt-4">
-     <h1 class="font-bold text-white">My name</h1>
-          </div>
+     <h1 class="font-bold text-white mr-4">My name</h1>
       <a href="/" class="mr-4">
         <img class="h-12 w-auto" src="../../assets/logo_round.png" alt="Workflow">
       </a>
