added first data page

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -65,20 +65,20 @@
     <nav *ngIf="isLoggedIn" aria-label="Sidebar" class="hidden md:block md:flex-shrink-0 md:bg-Jorange md:overflow-y-auto">
       <div class="relative w-20 flex flex-col p-3 space-y-3">
 
-        <a href="#" class="hover:bg-JorangeSelect text-white flex-shrink-0 inline-flex items-center justify-center h-14 w-14 mt-1 rounded-lg">
+        <a href="/" class="hover:bg-JorangeSelect text-white flex-shrink-0 inline-flex items-center justify-center h-14 w-14 mt-1 rounded-lg">
           <span class="sr-only ">CV</span>
           <fa-icon transform="grow-18" [icon]="faFile"></fa-icon>
 
           <!-- Heroicon name: outline/inbox -->
         </a>
 
-        <a href="#" class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 mt-1 rounded-lg">
+        <a href="/contactInfo" class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 mt-1 rounded-lg">
           <span class="sr-only">Contact info</span>
           <!-- Heroicon name: outline/archive -->
           <fa-icon transform="grow-18" [icon]="faIdCard"></fa-icon>
         </a>
 
-        <a href="#" class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 mt-1 rounded-lg">
+        <a href="/about" class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 mt-1 rounded-lg">
           <span class="sr-only">About</span>
           <!-- Heroicon name: outline/user-circle -->
           <fa-icon transform="grow-18" [icon]="faMessage"></fa-icon>
