added data card

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -78,41 +78,41 @@
           <fa-icon transform="grow-18" [icon]="faIdCard"></fa-icon>
         </a>
 
-        <a href="#" class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 mt-1 rounded-lg">
+        <a href="/educations" class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 mt-1 rounded-lg">
           <span class="sr-only">Educations</span>
           <!-- Heroicon name: outline/ban -->
           <fa-icon transform="grow-18" [icon]="faGraduationCap"></fa-icon>
 
         </a>
 
-        <a href="#" class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 mt-1 rounded-lg">
+        <a href="/certifications" class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 mt-1 rounded-lg">
           <span class="sr-only">Certificates</span>
           <!-- Heroicon name: outline/flag -->
           <fa-icon transform="grow-18" [icon]="faCertificate"></fa-icon>
         </a>
 
-        <a href="#" class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 mt-1 rounded-lg">
+        <a href="/experiences" class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 mt-1 rounded-lg">
           <span class="sr-only">Experiences</span>
           <!-- Heroicon name: outline/pencil-alt -->
           <fa-icon transform="grow-18" [icon]="faBriefcase"></fa-icon>
 
         </a>
 
-        <a href="#" class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 mt-1 rounded-lg">
+        <a href="/skills" class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 mt-1 rounded-lg">
           <span class="sr-only">Skills</span>
           <!-- Heroicon name: outline/ban -->
           <fa-icon transform="grow-18" [icon]="faLightbulb"></fa-icon>
 
         </a>
 
-        <a href="#" class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 mt-1 rounded-lg">
+        <a href="/languages" class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 mt-1 rounded-lg">
           <span class="sr-only">Languages</span>
           <!-- Heroicon name: outline/ban -->
           <fa-icon transform="grow-18" [icon]="faEarthEurope"></fa-icon>
 
         </a>
 
-        <a href="#" class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 mt-1 rounded-lg">
+        <a href="/settings" class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 mt-1 rounded-lg">
           <span class="sr-only">Settings</span>
           <!-- Heroicon name: outline/ban -->
           <fa-icon transform="grow-18" [icon]="faGear"></fa-icon>
