--- a/src/app/education/education.component.html
+++ b/src/app/education/education.component.html
@@ -1,6 +1,58 @@
-<div class="max-w-7xl mt-8 mb-12 mx-auto px-4 sm:px-6 lg:px-8">
+<div class="max-w-7xl mt-8 mb-12  mx-auto px-4 sm:px-6 lg:px-8">
   <div class="max-w-3xl mx-auto">
-  <h1>education works!</h1>
+    <!-- This example requires Tailwind CSS v2.0+ -->
+    <div class="bg-Jblue drop-shadow-2xl overflow-hidden sm:rounded-2xl">
+      <div class="px-4 py-5 sm:px-6">
+
+
+        <div class="flex flex-row">
+          <div class="basis-[97%] ">
+            <h3 class="text-lg leading-6 font-bold text-white">Professionele Bachelor Toegepaste Informatica</h3>
+            <p class="mt-1 max-w-2xl text-sm text-white">Personal details and application.</p>
+          </div>
+          <div>
+            <a href="#" class="text-white hover:bg-JorangeSelect items-center justify-center mt-1 rounded-lg">
+              <span class="sr-only">Educations</span>
+              <fa-icon transform="grow-12" [icon]="faPencil"></fa-icon>
+            </a>
+          </div>
+        </div>
+
+      </div>
+      <div class="border-t border-gray-200 px-4 py-5 sm:px-6">
+        <dl class="grid grid-cols-1 gap-x-4 gap-y-8 sm:grid-cols-2">
+          <div class="sm:col-span-1">
+            <dt class="text-sm font-medium text-white">School:</dt>
+            <dd class="mt-1 text-sm text-white">Thomas more hogeschool</dd>
+            <dd class="mt-1 text-sm text-white">16/09/2018 tot heden</dd>
+          </div>
+          <div class="sm:col-span-1">
+            <dt class="text-sm font-medium text-white">Address</dt>
+            <dd class="mt-1 text-sm text-white">Kleinhoefstraat 4</dd>
+            <dd class="mt-1 text-sm text-white">2440 Geel (België)</dd>
+          </div>
+          <div class="sm:col-span-1">
+            <dt class="text-sm font-medium text-white">Field of study</dt>
+            <dd class="mt-1 text-sm text-white">Application development</dd>
+          </div>
+          <div class="sm:col-span-1">
+            <dt class="text-sm font-medium text-white">Website</dt>
+            <dd class="mt-1 text-sm text-white">www.thomasmore.be</dd>
+          </div>
+        </dl>
+      </div>
+
+      <!-- This example requires Tailwind CSS v2.0+ -->
+      <div class="flex bg-white items-center h-8 w-40 sm:rounded-xl mb-4 ml-4">
+
+        <button type="button" class="ml-6 bg-gray-200 relative inline-flex flex-shrink-0 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" role="switch" aria-checked="false" aria-labelledby="active">
+          <span aria-hidden="true" class="translate-x-0 pointer-events-none inline-block h-5 w-5 rounded-full bg-white shadow transform ring-0 transition ease-in-out duration-200"></span>
+        </button>
+        <span class="ml-3" id="active">
+    <span class="text-lg font-bold text-Jblue">Active </span>
+  </span>
+      </div>
+    </div>
   </div>
 </div>
 
