--- a/src/app/education-feature/education-form/education-form.component.html
+++ b/src/app/education-feature/education-form/education-form.component.html
@@ -1,44 +1,42 @@
 <div class="max-w-7xl mt-8 mb-12 mx-auto px-4 sm:px-6 lg:px-8 bg-Jblue rounded-3xl">
-<div class="max-w-3xl mx-auto">
-    <form class="space-y-8 divide-y divide-gray-200">
+  <div class="max-w-3xl mx-auto">
+    <form class="space-y-8 divide-y divide-gray-200 ">
       <div class="space-y-8 divide-y divide-gray-200">
         <div class="pt-8 pb-8">
           <div>
-            <h3 class="text-xl leading-6 font-bold text-white">Contact info</h3>
+            <h3 class="text-lg leading-6 font-large text-white text-2xl mb-4">Education</h3>
             <p class="mt-1 text-sm text-white">Use a permanent address where you can receive mail.</p>
           </div>
 
           <hr>
 
-          <div class="sm:col-span-6 mt-4">
-            <label class="block text-sm font-medium text-white"> Photo </label>
-            <div class="mt-1 flex items-center">
-            <span class="h-12 w-12 rounded-full overflow-hidden bg-gray-100">
-              <svg class="h-full w-full text-gray-300" fill="currentColor" viewBox="0 0 24 24">
-                <path d="M24 20.993V24H0v-2.996A14.977 14.977 0 0112.004 15c4.904 0 9.26 2.354 11.996 5.993zM16.002 8.999a4 4 0 11-8 0 4 4 0 018 0z" />
-              </svg>
-            </span>
-              <button type="button" class="ml-5 bg-white py-2 px-3 border border-gray-300 rounded-md shadow-sm text-sm leading-4 font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Change</button>
+          <div class="sm:col-span-3 mt-4">
+            <label for="first-name" class="block text-sm font-medium text-white">Diploma</label>
+            <div class="mt-1">
+              <input type="text" name="first-name" id="first-name" autocomplete="given-name" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md">
             </div>
           </div>
 
-          <div class="mt-6 grid grid-cols-1 gap-y-6 gap-x-4 sm:grid-cols-6">
-            <div class="sm:col-span-3">
-              <label for="first-name" class="block text-sm font-medium text-white"> First name </label>
-              <div class="mt-1">
-                <input type="text" name="first-name" id="first-name" autocomplete="given-name" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md">
-              </div>
+          <div class="sm:col-span-6 mt-4">
+            <label for="about" class="block text-sm font-medium text-white"> Description </label>
+            <div class="mt-1">
+              <textarea id="about" name="about" rows="3" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border border-gray-300 rounded-md"></textarea>
             </div>
+            <p class="mt-2 text-sm text-white">Write a few sentences about yourself.</p>
+          </div>
+
+          <div class="mt-6 grid grid-cols-1 gap-y-6 gap-x-4 sm:grid-cols-6">
+
 
             <div class="sm:col-span-3">
-              <label for="last-name" class="block text-sm font-medium text-white"> Last name </label>
+              <label for="last-name" class="block text-sm font-medium text-white"> School </label>
               <div class="mt-1">
                 <input type="text" name="last-name" id="last-name" autocomplete="family-name" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md">
               </div>
             </div>
 
-            <div class="sm:col-span-4">
-              <label for="email" class="block text-sm font-medium text-white"> Email address </label>
+            <div class="sm:col-span-3">
+              <label for="email" class="block text-sm font-medium text-white"> Field of study </label>
               <div class="mt-1">
                 <input id="email" name="email" type="email" autocomplete="email" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md">
               </div>
@@ -56,7 +54,7 @@
             </div>
 
             <div class="sm:col-span-3">
-              <label for="first-name" class="block text-sm font-medium text-white"> Phone </label>
+              <label for="first-name" class="block text-sm font-medium text-white"> Website </label>
               <div class="mt-1">
                 <input type="text" name="phone" id="phone" autocomplete="given-name" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md">
               </div>
@@ -91,59 +89,28 @@
             </div>
           </div>
 
-
-
-
-          <div class="mt-8">
-            <h3 class="text-lg leading-6 font-medium text-white">About</h3>
-            <p class="mt-1 text-sm text-white">Use a permanent address where you can receive mail.</p>
-          </div>
-
-          <hr>
-
           <div class="mt-6 grid grid-cols-1 gap-y-6 gap-x-4 sm:grid-cols-6">
 
-            <div class="sm:col-span-6">
-              <label for="about" class="block text-sm font-medium text-white"> About </label>
-              <div class="mt-1">
-                <textarea id="about" name="about" rows="3" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border border-gray-300 rounded-md"></textarea>
-              </div>
-              <p class="mt-2 text-sm text-white">Write a few sentences about yourself.</p>
-            </div>
+
 
             <div class="sm:col-span-3">
-              <label for="country" class="block text-sm font-medium text-white"> Category </label>
+              <label for="first-name" class="block text-sm font-medium text-white"> From </label>
               <div class="mt-1">
-                <select id="category" name="category" autocomplete="category-name" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md">
-                  <option>front-end</option>
-                  <option>back-end</option>
-                  <option>cloud native</option>
-                </select>
+                <input type="text" name="startDate" id="startDate" autocomplete="given-name" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md">
               </div>
             </div>
 
             <div class="sm:col-span-3">
-              <label for="first-name" class="block text-sm font-medium text-white"> LinkedIn </label>
+              <label for="first-name" class="block text-sm font-medium text-white"> To </label>
               <div class="mt-1">
-                <input type="text" name="LinkedIn" id="LinkedIn" autocomplete="given-name" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md">
+                <input type="text" name="endDate" id="endDate" autocomplete="given-name" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md">
               </div>
             </div>
 
-            <div class="sm:col-span-3">
-              <label for="country" class="block text-sm font-medium text-white"> Drivers license </label>
-              <div class="mt-1">
-                <select id="driver-license" name="driver-license" autocomplete="driver-license-name" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md">
-                  <option>A</option>
-                  <option>B</option>
-                  <option>C</option>
-                </select>
-              </div>
-            </div>
-
+              <button type="button" class="flex bg-white items-center h-10 w-40 sm:rounded-xl mb-4">
+                <p class="ml-10 text-Jblue font-bold text-2xl">Submit</p>
+              </button>
           </div>
-          <button type="button" class="flex bg-white items-center h-10 w-40 sm:rounded-xl mt-4">
-            <p class="ml-10 text-Jblue font-bold text-2xl">Submit</p>
-          </button>
         </div>
       </div>
     </form>
