--- a/src/app/education-feature/education/education.component.html
+++ b/src/app/education-feature/education/education.component.html
@@ -8,10 +8,10 @@
         <div class="flex flex-row">
           <div class="basis-[97%] ">
             <h3 class="text-lg leading-6 font-bold text-white">Professionele Bachelor Toegepaste Informatica</h3>
-            <p class="mt-1 max-w-2xl text-sm text-white">Personal details and application.</p>
+            <p class="mt-1 max-w-2xl text-sm text-white">study description</p>
           </div>
           <div>
-            <a href="#" class="text-white hover:bg-JorangeSelect items-center justify-center mt-1 rounded-lg">
+            <a href="/educationform" class="text-white hover:bg-JorangeSelect items-center justify-center mt-1 rounded-lg">
               <span class="sr-only">Educations</span>
               <fa-icon transform="grow-12" [icon]="faPencil"></fa-icon>
             </a>
@@ -43,7 +43,7 @@
       </div>
 
       <!-- This example requires Tailwind CSS v2.0+ -->
-      <div class="flex bg-white items-center h-8 w-40 sm:rounded-xl mb-4 ml-4">
+      <div class="flex bg-white items-center h-10 w-40 sm:rounded-xl mb-4 ml-4">
 
         <button type="button" class="ml-6 bg-gray-200 relative inline-flex flex-shrink-0 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" role="switch" aria-checked="false" aria-labelledby="active">
           <span aria-hidden="true" class="translate-x-0 pointer-events-none inline-block h-5 w-5 rounded-full bg-white shadow transform ring-0 transition ease-in-out duration-200"></span>
@@ -53,6 +53,7 @@
   </span>
       </div>
     </div>
+
   </div>
 </div>
 
