--- a/src/app/contact-info/contact-info.component.html
+++ b/src/app/contact-info/contact-info.component.html
@@ -141,7 +141,7 @@
             </div>
 
           </div>
-          <button type="button" class="flex bg-white items-center h-10 w-40 sm:rounded-xl mt-4">
+          <button type="button" class="flex bg-white items-center h-10 w-40 rounded-xl mt-4">
             <p class="ml-10 text-Jblue font-bold text-2xl">Submit</p>
           </button>
         </div>
