--- a/src/app/education-feature/education-form/education-form.component.html
+++ b/src/app/education-feature/education-form/education-form.component.html
@@ -107,7 +107,7 @@
               </div>
             </div>
 
-              <button type="button" class="flex bg-white items-center h-10 w-40 sm:rounded-xl mb-4">
+              <button type="button" class="flex bg-white items-center h-10 w-40 rounded-xl mb-4">
                 <p class="ml-10 text-Jblue font-bold text-2xl">Submit</p>
               </button>
           </div>
