--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -38,23 +38,21 @@
         <div class="max-w-8xl mx-auto py-3 px-2 sm:px-4">
           <a href="/" class="block rounded-md py-2 px-3 text-base font-medium text-gray-900 hover:bg-gray-100">CV</a>
 
-          <a href="/ContactInfo" class="block rounded-md py-2 px-3 text-base font-medium text-gray-900 hover:bg-gray-100">Contact info</a>
+          <a href="/contactInfo" class="block rounded-md py-2 px-3 text-base font-medium text-gray-900 hover:bg-gray-100">Contact info</a>
 
-          <a href="/About" class="block rounded-md py-2 px-3 text-base font-medium text-gray-900 hover:bg-gray-100">About</a>
+          <a href="/educations" class="block rounded-md py-2 px-3 text-base font-medium text-gray-900 hover:bg-gray-100">Educations</a>
 
-          <a href="/Educations" class="block rounded-md py-2 px-3 text-base font-medium text-gray-900 hover:bg-gray-100">Educations</a>
+          <a href="/certifications" class="block rounded-md py-2 px-3 text-base font-medium text-gray-900 hover:bg-gray-100">Certificates</a>
 
-          <a href="/Certifications" class="block rounded-md py-2 px-3 text-base font-medium text-gray-900 hover:bg-gray-100">Certificates</a>
+          <a href="/skills" class="block rounded-md py-2 px-3 text-base font-medium text-gray-900 hover:bg-gray-100">Skills</a>
 
-          <a href="/Skills" class="block rounded-md py-2 px-3 text-base font-medium text-gray-900 hover:bg-gray-100">Skills</a>
+          <a href="/eExperiences" class="block rounded-md py-2 px-3 text-base font-medium text-gray-900 hover:bg-gray-100">Experiences</a>
 
-          <a href="/Experiences" class="block rounded-md py-2 px-3 text-base font-medium text-gray-900 hover:bg-gray-100">Experiences</a>
+          <a href="/languages" class="block rounded-md py-2 px-3 text-base font-medium text-gray-900 hover:bg-gray-100">Languages</a>
 
-          <a href="/Languages" class="block rounded-md py-2 px-3 text-base font-medium text-gray-900 hover:bg-gray-100">Languages</a>
+          <a href="/settings" class="block rounded-md py-2 px-3 text-base font-medium text-gray-900 hover:bg-gray-100">Settings</a>
 
-          <a href="/Settings" class="block rounded-md py-2 px-3 text-base font-medium text-gray-900 hover:bg-gray-100">Settings</a>
-
-          <a href="/Logout" class="block rounded-md py-2 px-3 text-base font-medium text-gray-900 hover:bg-gray-100">Logout</a>
+          <a href="/login" (click)="logOut()" class="block rounded-md py-2 px-3 text-base font-medium text-gray-900 hover:bg-gray-100">Logout</a>
 
         </div>
       </nav>
