--- a/src/app/education-feature/education/education.component.html
+++ b/src/app/education-feature/education/education.component.html
@@ -1,7 +1,7 @@
 <div class="max-w-7xl mt-8 mb-12  mx-auto px-4 sm:px-6 lg:px-8">
   <div class="max-w-3xl mx-auto">
     <!-- This example requires Tailwind CSS v2.0+ -->
-    <div *ngFor="let e of educations$ | async" class="bg-Jblue drop-shadow-2xl overflow-hidden rounded-2xl mt-4">
+    <div *ngFor="let e of (educations$ | async )" class="bg-Jblue drop-shadow-2xl overflow-hidden rounded-2xl mt-4">
       <div class="px-4 py-5 sm:px-6">
 
 
