--- a/src/app/education-feature/education/education.component.html
+++ b/src/app/education-feature/education/education.component.html
@@ -1,20 +1,20 @@
 <div class="max-w-7xl mt-8 mb-12  mx-auto px-4 sm:px-6 lg:px-8">
   <div class="max-w-3xl mx-auto">
     <!-- This example requires Tailwind CSS v2.0+ -->
-    <div *ngFor="let e of (educations$ | async )" class="bg-Jblue drop-shadow-2xl overflow-hidden rounded-2xl mt-4">
+    <div *ngFor="let e of (educations$ | async)" class="bg-Jblue drop-shadow-2xl overflow-hidden rounded-2xl mt-4">
       <div class="px-4 py-5 sm:px-6">
 
 
         <div class="flex flex-row">
-          <div class="basis-[97%] ">
+          <div class="basis-[97%]">
             <h3 class="text-lg leading-6 font-bold text-white">{{e.diploma}}</h3>
             <p class="mt-1 max-w-2xl text-sm text-white">{{e.description}}</p>
           </div>
           <div>
-            <a href="/educationform" class="text-white hover:bg-JorangeSelect items-center justify-center mt-1 rounded-lg">
+            <button (click)="onClick(e.candidateId)" class="text-white hover:bg-JorangeSelect items-center justify-center mt-1 rounded-lg">
               <span class="sr-only">Educations</span>
               <fa-icon transform="grow-12" [icon]="faPencil"></fa-icon>
-            </a>
+            </button>
           </div>
         </div>
 
@@ -45,7 +45,7 @@
       <!-- This example requires Tailwind CSS v2.0+ -->
       <div class="flex bg-white items-center h-10 w-40 rounded-xl mb-4 ml-4">
 
-        <button type="button" class="ml-6 bg-gray-200 relative inline-flex flex-shrink-0 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" role="switch" aria-checked="false" aria-labelledby="active">
+        <button type="button"  class="ml-6 bg-gray-200 relative inline-flex flex-shrink-0 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" role="switch" aria-checked="false" aria-labelledby="active">
           <span aria-hidden="true" class="translate-x-0 pointer-events-none inline-block h-5 w-5 rounded-full bg-white shadow transform ring-0 transition ease-in-out duration-200"></span>
         </button>
         <span class="ml-3" id="active">
