--- a/src/app/education-feature/education-form/education-form.component.html
+++ b/src/app/education-feature/education-form/education-form.component.html
@@ -1,6 +1,6 @@
 <div class="max-w-7xl mt-8 mb-12 mx-auto px-4 sm:px-6 lg:px-8 bg-Jblue rounded-3xl">
   <div class="max-w-3xl mx-auto">
-    <form [formGroup]="educationForm" (ngSubmit)="onSubmit()" *ngIf="(education$ | async) as e" class="space-y-8 divide-y divide-gray-200 ">
+    <form [formGroup]="educationForm" (ngSubmit)="onSubmit()" class="space-y-8 divide-y divide-gray-200 ">
       <div class="space-y-8 divide-y divide-gray-200">
         <div class="pt-8 pb-8">
           <div>
@@ -60,10 +60,17 @@
               </div>
             </div>
 
-            <div class="sm:col-span-6">
-              <label for="streetAddress" class="block text-sm font-medium text-white"> Street address </label>
+            <div class="sm:col-span-3">
+              <label for="street" class="block text-sm font-medium text-white"> Street </label>
               <div class="mt-1">
-                <input type="text" name="streetAddress" id="streetAddress" formControlName="streetAddress"  autocomplete="street-address" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md">
+                <input type="text" name="street" id="street" formControlName="street"  autocomplete="street-address" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md">
+              </div>
+            </div>
+
+            <div class="sm:col-span-3">
+              <label for="number" class="block text-sm font-medium text-white"> House number </label>
+              <div class="mt-1">
+                <input type="text" name="street" id="number" formControlName="number"  autocomplete="street-address" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md">
               </div>
             </div>
 
@@ -96,14 +103,14 @@
             <div class="sm:col-span-3">
               <label for="startDate" class="block text-sm font-medium text-white"> From </label>
               <div class="mt-1">
-                <input type="text" name="startDate" id="startDate" formControlName="startDate" autocomplete="given-name" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md">
+                <input type="date" name="startDate" id="startDate" formControlName="startDate" autocomplete="given-name" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md">
               </div>
             </div>
 
             <div class="sm:col-span-3">
               <label for="endDate" class="block text-sm font-medium text-white"> To </label>
               <div class="mt-1">
-                <input type="text" name="endDate" id="endDate" formControlName="endDate" autocomplete="given-name" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md">
+                <input type="date" name="endDate" id="endDate" formControlName="endDate" autocomplete="given-name" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md">
               </div>
             </div>
 
