--- a/src/app/education-feature/education/education.component.html
+++ b/src/app/education-feature/education/education.component.html
@@ -44,8 +44,8 @@
 
       <!-- This example requires Tailwind CSS v2.0+ -->
       <div class="flex bg-white items-center h-10 w-40 rounded-xl mb-4 ml-4">
-        <input type="checkbox" (click)="setActive(e)"  *ngIf="e.active === false" class="ml-6 bg-gray-200 relative inline-flex flex-shrink-0 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" role="switch">
-        <input type="checkbox" (click)="setInActive(e)" *ngIf="e.active === true" checked  class="ml-6 bg-gray-200 relative inline-flex flex-shrink-0 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" role="switch">
+        <input type="checkbox" (click)="toggleActive(e)"  *ngIf="e.active === false" class="ml-6 bg-gray-200 relative inline-flex flex-shrink-0 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" role="switch">
+        <input type="checkbox" (click)="toggleActive(e)" *ngIf="e.active === true" checked  class="ml-6 bg-gray-200 relative inline-flex flex-shrink-0 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" role="switch">
 
         <span class="ml-3" id="active">
     <span class="text-lg font-bold text-Jblue">Active </span>
